# pico_w_rust

./: Cargo.toml  README.md  flash_and_log.ps1
.cargo/: config.toml
