[package]
name = "pico_w_rust_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
cyw43 = {version = "0.2.0", features = ["defmt"]}
cyw43-pio = {version = "0.2.0", features = ["defmt"]}
defmt = "0.3.8"
defmt-rtt = "0.4.1"
defmt-serial = "0.10.0"
embassy-executor = {version="0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
embassy-rp = {version="0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"]}
embassy-time = {version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"]}
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
